--- a/package.json
+++ b/package.json
@@ -1,31 +1,90 @@
 {
   "name": "vue-dropdown-breadcrum",
+  "description": "A breadcrumb library with dropdown option",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+  "author": {
+    "name": "Ahmet Can",
+    "email": "ahmetcankucukkor@gmail.com"
   },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ack79/vue-dropdown-breadcrumb"
+  },
+  "bugs": {
+    "url": "https://github.com/ack79/vue-dropdown-breadcrumb/issues"
+  },
+  "keywords": [
+    "vue",
+    "vue2",
+    "breadcrumb",
+    "dropdown"
+  ],
+  "main": "dist/vue-dropdown-breadcrumb.umd.js",
+  "module": "dist/vue-dropdown-breadcrumb.esm.js",
+  "unpkg": "dist/vue-dropdown-breadcrumb.min.js",
+  "scripts": {
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "npm run test && npm run build:example && npm run build:library",
+    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/vue-dropdown-breadcrumb.umd.js",
+    "build:es": "rollup --config build/rollup.config.js --format es --file dist/vue-dropdown-breadcrumb.esm.js",
+    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/vue-dropdown-breadcrumb.min.js",
+    "build:library": "npm run build:unpkg & npm run build:es & npm run build:umd & npm run build:unpkg",
+    "build:example": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "jest"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "^1.0.3",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^2.2.1",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/runtime": "^7.3.4",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^24.5.0",
+    "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.0.0",
+    "jest-serializer-vue": "^2.0.2",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.9.0",
+    "rollup": "^1.7.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-css-only": "^1.0.0",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-terser": "^4.0.3",
+    "rollup-plugin-vue": "^4.3.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.1",
+    "vue": "^2.6.10",
+    "vue-jest": "^3.0.4",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-serializer-vue"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!tippy.js/themes/light.css)"
+    ]
   }
 }
